# machine_learning

./: .gitignore  ARCHITECTURE_DIAGRAM.txt  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  GETTING_STARTED.md  MNIST_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_CIFAR10_XAI.md  README_MAIN.md  README_MNIST_XAI.md  README_TOURNAMENT.md  SHAPE_ANALYSIS_SUMMARY.md  SHAPE_INTERPRETATION_GUIDE.md  START_HERE.md  STREAMLIT_APP_GUIDE.md  STREAMLIT_APP_SUMMARY.md  STREAMLIT_TROUBLESHOOTING.md  backend.py  cifar10_cnn_model.py  demo_lrp_activation_max.py  demo_mnist_xai.py  demo_xai.py  frontend.py  mnist_cbn_model.pkl  mnist_cbn_model.py  mnist_cnn_model.py  mnist_lime_explainer.py  mnist_lrp_activation_max.py  mnist_model.pkl  mnist_perturbation_analysis.py  mnist_shap_explainer.py  mnist_shape_analysis.py  mnist_xai_visualizations.py  pyproject.toml  quick_test.py  requirements.txt  simple_mnist_xai_demo.py  simple_xai_demo.py  streamlit_mnist_app.py  (+6 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
